--- a/src/style/Login.scss
+++ b/src/style/Login.scss
@@ -23,7 +23,8 @@ body {
       align-items: center;
       gap: 2em;
 
-      input {
+      input,
+      select {
         width: 90vw;
         height: 47px;
 
