--- a/src/style/Home.scss
+++ b/src/style/Home.scss
@@ -7,11 +7,54 @@ a {
   justify-content: center;
   align-items: center;
   text-decoration: none;
-  .material-symbols-outlined {
-    font-size: 3em;
-  }
+}
+.material-symbols-outlined {
+  font-size: 3em;
+}
 
-  p {
-    margin: 0;
+p {
+  margin: 0;
+}
+
+.home-container {
+  margin-top: 4em;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 2em;
+  font-family: "Cairo", sans-serif;
+
+  .home-btn {
+    background-color: v.$tertiary-color;
+    border-radius: 5px;
+    width: 35%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+
+    a {
+      color: v.$secondary-color;
+
+      &:hover {
+        color: v.$primary-color;
+      }
+    }
+
+    p {
+      font-size: 24px;
+    }
+
+    &:first-child {
+      background-color: v.$accent-color;
+      color: v.$primary-color;
+    }
+
+    &:last-child {
+      width: 85%;
+    }
   }
 }
