--- a/src/style/TrackWorkout.scss
+++ b/src/style/TrackWorkout.scss
@@ -8,6 +8,9 @@
   margin-left: 1em;
   margin-right: 1em;
   font-size: 1em;
+  a {
+    color: v.$secondary-color;
+  }
 }
 
 .main-content {
@@ -27,5 +30,75 @@
     font-size: 2em;
     padding-top: 0.5em;
     padding-bottom: 0.5em;
+  }
+
+  .exercises {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+
+    .exercise {
+      margin-top: 1em;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 90vw;
+      background-color: v.$tertiary-color;
+      border-radius: 5px;
+      gap: 1em;
+
+      .exercise-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 90%;
+        margin-top: 0.5em;
+        margin-left: 1em;
+        margin-right: 1em;
+
+        span {
+          font-size: 1.5em;
+        }
+      }
+
+      .exercise-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        width: 100%;
+
+        .set {
+          margin-left: 1em;
+          padding-bottom: 0.5em;
+          padding-top: 0.5em;
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          align-items: center;
+          width: 90%;
+          margin-right: 1em;
+          border-top: 1px solid #bfbeb0;
+
+          span {
+            font-size: 1.5em;
+          }
+        }
+
+        .add-set {
+          background-color: v.$accent-color;
+          border-radius: 5px;
+          color: v.$primary-color;
+          margin-right: auto;
+          margin-left: 0.5em;
+          font-size: 1.3em;
+          width: 30%;
+          text-align: center;
+        }
+      }
+    }
   }
 }
