--- a/src/style/Login.scss
+++ b/src/style/Login.scss
@@ -33,7 +33,7 @@ body {
         }
 
         &::placeholder {
-          color: v.$tertiary-color;
+          color: #acab9d;
         }
       }
 
