planned workouts finished

--- a/src/style/Login.scss
+++ b/src/style/Login.scss
@@ -2,7 +2,7 @@
 body {
   margin: 0;
   padding: 0;
-  .container {
+  .login-container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
