--- a/src/style/WorkoutDetail.scss
+++ b/src/style/WorkoutDetail.scss
@@ -1,43 +1,17 @@
-@use "./variables" as v;
-
-.proceed-or-cancel {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 0.5em;
-  margin-left: 1em;
-  margin-right: 1em;
-  font-size: 1em;
-  a {
-    color: v.$secondary-color;
-  }
-}
-
-.main-content {
+@use "_variables.scss" as v;
+.container {
+  margin-top: 4em;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 1em;
-  .add-btn {
-    width: 90%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: v.$accent-color;
-    color: v.$primary-color;
-    border-radius: 5px;
-    font-size: 2em;
-    padding-top: 0.5em;
-    padding-bottom: 0.5em;
-  }
+  font-family: "Cairo", sans-serif;
 
-  .exercises {
+  .workout-detail-content {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100vw;
 
     .exercise {
       margin-top: 1em;
@@ -58,10 +32,6 @@
         margin-top: 0.5em;
         margin-left: 1em;
         margin-right: 1em;
-
-        span {
-          font-size: 1.5em;
-        }
       }
 
       .exercise-container {
@@ -83,34 +53,10 @@
           margin-right: 1em;
           border-top: 1px solid #bfbeb0;
 
-          .rep-weight-input {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-          }
-
           .set-rep,
           .set-weight {
-            border: none;
             font-size: 1em;
-            width: 20%;
-            background-color: transparent;
           }
-
-          span {
-            font-size: 1.5em;
-          }
-        }
-
-        .add-set {
-          background-color: v.$accent-color;
-          border-radius: 5px;
-          color: v.$primary-color;
-          margin-right: auto;
-          margin-left: 0.5em;
-          font-size: 1.3em;
-          width: 30%;
-          text-align: center;
         }
       }
     }
