--- a/src/style/Home.scss
+++ b/src/style/Home.scss
@@ -10,6 +10,7 @@
   justify-content: center;
   align-items: center;
   text-decoration: none;
+  cursor: pointer;
 }
 .material-symbols-outlined {
   font-size: 3em;
@@ -39,6 +40,7 @@ p {
     align-items: center;
     padding: 5px;
     text-align: center;
+    cursor: pointer;
 
     a {
       color: v.$secondary-color;
@@ -59,6 +61,14 @@ p {
 
     &:last-child {
       font-size: 0.7em;
+    }
+  }
+}
+
+@media screen and (min-width: 415px) {
+  .home-container {
+    .home-btn:last-child {
+      font-size: inherit;
     }
   }
 }
